# AI-Content-Generation-Engine

./: AI-Content-Generation-Engine-PRD.md
ai-content-engine/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
ai-content-engine/services/ingestion/: Dockerfile  pyproject.toml
ai-content-engine/services/ingestion/ingestion/: __init__.py  config.py  dependencies.py  main.py
ai-content-engine/services/ingestion/ingestion/repositories/: generation_repo.py  schema_repo.py  template_repo.py
ai-content-engine/services/ingestion/ingestion/schemas/: generation_schemas.py  schema_schemas.py  template_schemas.py
ai-content-engine/services/ingestion/ingestion/services/: generation_service.py  schema_service.py  template_service.py
ai-content-engine/services/model_layer/: Dockerfile  pyproject.toml
ai-content-engine/services/model_layer/model_layer/: __init__.py  config.py
ai-content-engine/services/model_layer/model_layer/kafka/: consumer.py
ai-content-engine/services/model_layer/model_layer/providers/: base.py
ai-content-engine/services/model_layer/model_layer/services/: routing_service.py
ai-content-engine/services/output_validation/: Dockerfile  pyproject.toml
ai-content-engine/services/output_validation/output_validation/kafka/: consumer.py
ai-content-engine/services/output_validation/output_validation/services/: validation_service.py
ai-content-engine/services/prompt_engine/: Dockerfile  pyproject.toml
ai-content-engine/services/prompt_engine/prompt_engine/: __init__.py  config.py  consumer.py  main.py
ai-content-engine/shared/: pyproject.toml
ai-content-engine/shared/shared/: __init__.py  config.py  database.py  exceptions.py  logging.py
ai-content-engine/shared/shared/events/: __init__.py  envelope.py  generation_events.py  input_events.py  persistence_events.py  prompt_events.py  validation_events.py
ai-content-engine/shared/shared/kafka/: __init__.py  consumer.py  producer.py
ai-content-engine/shared/shared/middleware/: __init__.py  auth.py  correlation.py  error_handler.py
ai-content-engine/shared/shared/migrations/: env.py
ai-content-engine/shared/shared/models/: __init__.py  audit.py  base.py  generation.py  quota.py  schema.py  template.py  user.py
ai-content-engine/shared/shared/schemas/: __init__.py  health.py  responses.py
ai-content-engine/shared/shared/utils/: datetime.py
(+13 files in other folders)
