[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-content-engine-model-layer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ai-content-engine-shared",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
]
